# super_katy_study_pkg

./: CMakeLists.txt  package.xml  turtlebot3_teleop_key.launch
config/: gmapping_params.yaml  teb_local_planner_params.yaml
launch/: another_one.launch  move_base.launch  my_first.launch  turtle_tf_test.launch  turtle_with_carrot.launch  turtlebot3_for_fun.launch  turtlebot3_gazebo_slam.launch  turtlebot3_gmapping.launch  turtlebot3_hector_mapping.launch  turtlebot3_move_base.launch  turtlebot3_my_gmapping.launch  turtlebot3_sim_mapping.launch  turtlebot3_sim_start.launch  turtlebot3_slam.launch  turtlebot3_teleop_new.launch  turtlebot3_tf.launch  turtlebot3_world.launch
polynomial_system/: CMakeLists.txt  package.xml
polynomial_system/launch/: polynomial_system.launch
polynomial_system/scripts/: polynomial_node.py  request_node.py  summing_node.py
rviz/: sim_initial.rviz
scripts/: overflow.py  parametr.py  subscriber.py  task1.py  task2.py  time_node.py  turtle_tf_broadcaster.py  turtle_with_carrot_broadcaster.py
