<?xml version="1.0"?>
<package format="2">
  <name>super_robot_package</name>
  <version>0.0.0</version>
  <description>The super_robot_package package</description>
  <maintainer email="katy@todo.todo">katy</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
